<resources>
    <string name="app_name">CarsApp</string>
    <string name="login_form_title">Login</string>
    <string name="login_title_text">Enter your email and password:</string>
    <string name="input_email_hint">Input your email here…</string>
    <string name="input_password_hint">Input password here…</string>
    <string name="login_button_text">LOGIN</string>
    <string name="home_activity_title">Home</string>
    <string name="car_details_title">Car details</string>
    <string name="car_details_age_format">Age: %1$d</string>
    <string name="car_details_speed_format">Top speed: %1$d km/h</string>
    <string name="car_details_registration_format">Registration: %1$s</string>
    <string name="car_list_age_format">Production year: %1$d</string>
    <string name="login_email_error_text">Invalid email</string>
    <string name="login_password_error_text">Password must contain minimum 6 characters!</string>
</resources>
