<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cobeosijek.carsapp.login.LoginActivity">

    <FrameLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/actionBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/defaultMargin"
            android:text="@string/login_form_title"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/actionBarTextSize" />
    </FrameLayout>

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionBar"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/defaultMargin"
        android:text="@string/login_title_text"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginTitle"
        android:layout_margin="@dimen/defaultMargin"
        android:drawablePadding="@dimen/icon_padding"
        android:drawableStart="@drawable/mail_icon"
        android:hint="@string/input_email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInput"
        android:layout_margin="@dimen/defaultMargin"
        android:drawablePadding="@dimen/icon_padding"
        android:drawableStart="@drawable/lock_icon"
        android:hint="@string/input_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submitLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInput"
        android:layout_margin="@dimen/defaultMargin"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login_button_text"
        android:textColor="@color/colorWhite" />

</RelativeLayout>